迁移到 Vue 3 + Element Plus + Vite

--- a/src/components/main/components/header-bar/header-bar.less
+++ b/src/components/main/components/header-bar/header-bar.less
@@ -1,13 +1,13 @@
 .header-bar{
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
   position: relative;
   .custom-content-con{
-    float: right;
+    margin-left: auto;
     height: auto;
-    line-height: 64px;
-    & > *{
-      float: right;
-    }
+    display: flex;
+    align-items: center;
   }
 }
